# radar-target-tracking-engine

./: .gitignore  CMakeLists.txt  README.md
cross_greedy/: meas.csv  residuals.csv  tracks.csv  truth.csv
cross_greedy_hard/: residuals.csv  tracks.csv  truth.csv
cross_hung_hard/: meas.csv  residuals.csv  tracks.csv
out2/: truth.csv
out_smoke/: meas.csv  residuals.csv  tracks.csv
out_v3/: meas.csv  tracks.csv
out_v4/: residuals.csv  truth.csv
out_v6/: tracks.csv
scripts/: smoke.sh
src/: csv.h  fnv1a.h  hungarian.cpp  hungarian.h  kalman.cpp  kalman.h  main.cpp  math_types.h  rng.h  sim.cpp  sim.h  tracker.cpp  tracker.h
tools/: plot_nis.py  plot_tracks.py
